@@ -322,11 +322,13 @@ class FactoryTool(PloneBaseTool, UniqueObject, SimpleItem):
     def _fixRequest(self):
         """Our before_publishing_traverse call mangles URL0.  This fixes up
         the REQUEST."""
+        # Everything seems to work without this method being called at all...
         factory_info = self.REQUEST.get(FACTORY_INFO, None)
         if not factory_info:
             return
         stack = factory_info['stack']
-        URL = self.REQUEST.URL0 + '/' + '/'.join(stack)
+        FACTORY_URL = self.REQUEST.URL
+        URL = '/'.join([FACTORY_URL] + stack)
         self.REQUEST.set('URL', URL)
 
         url_list = URL.split('/')
@@ -336,11 +338,13 @@ class FactoryTool(PloneBaseTool, UniqueObject, SimpleItem):
             url_list = url_list[:-1]
             n = n + 1
 
-        url_list = URL.split('/')
-        m = 0
-        while m < n:
-            self.REQUEST.set('BASE%d' % m, '/'.join(url_list[0:len(url_list)-n+1+m]))
-            m = m + 1
+        # BASE1 is the url of the Zope App object
+        n = len(self.REQUEST._steps) + 2
+        base = FACTORY_URL
+        for part in stack:
+            base = '%s/%s' % (base, part)
+            self.REQUEST.set('BASE%d' % n, base)
+            n += 1
         # TODO fix URLPATHn, BASEPATHn here too
 
     def isTemporary(self, obj):
